--- a/src/main/webapp/i18n/zh-cn/global.json
+++ b/src/main/webapp/i18n/zh-cn/global.json
@@ -1,6 +1,6 @@
 {
     "global": {
-        "title": "Jhipster",
+        "title": "分级诊疗",
         "browsehappy": "您目前使用<strong>过于老旧</strong>的浏览器, 建议您<a href=\"http://browsehappy.com/?locale=en\">升级浏览器</a>让您有更佳的上网体验.",
         "menu": {
             "home": "首页",
@@ -84,7 +84,7 @@
             "id" : "ID"
         },
         "ribbon": {
-            "dev":"Development"
+            "dev":"正式版"
         },
         "item-count": "显示第 {{first}} - {{second}} 条，共 {{total}} 条"
     },
