--- a/src/main/webapp/i18n/zh-cn/global.json
+++ b/src/main/webapp/i18n/zh-cn/global.json
@@ -1,12 +1,14 @@
 {
     "global": {
-        "title": "分级诊疗",
+        "title": "区域共享平台中心",
         "browsehappy": "您目前使用<strong>过于老旧</strong>的浏览器, 建议您<a href=\"http://browsehappy.com/?locale=en\">升级浏览器</a>让您有更佳的上网体验.",
         "menu": {
             "home": "首页",
             "jhipster-needle-menu-add-element": "JHipster will add additional menu entries here (do not translate!)",
             "entities": {
                 "main": "数据",
+                "china": "地区",
+                "hospital": "医院",
                 "jhipster-needle-menu-add-entry": "JHipster will add additional entities here (do not translate!)"
             },
             "account": {
