--- a/src/main/webapp/i18n/zh-cn/hospitalType.json
+++ b/src/main/webapp/i18n/zh-cn/hospitalType.json
@@ -2,8 +2,8 @@
     "jhipsterApp": {
         "HospitalType" : {
             "null": "",
-            "COMPOSITE": "COMPOSITE",
-            "SPECIALIZED": "SPECIALIZED"
+            "COMPOSITE": "综合医院",
+            "SPECIALIZED": "专科医院"
         }
     }
 }
